--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,9 +1,215 @@
 *********************************************
-CLAROLINE 1.6.0 FINAL - INSTALL
+CLAROLINE 1.6.0 - INSTALL
 *********************************************
 
-READ  the INSTALL.beta.txt file
+Thank you for downloading Claroline 1.6.0 . This text will guide you 
+through the basics of installation and operation of Claroline 1.6. Please 
+ensure you read this fully BEFORE proceeding with the installation.
+
+TABLE OF CONTENT :
+
+  1. REQUIREMENTS
+  2. INSTALLATION PROCEDURE
+     2.1 New Claroline installation
+     2.2 Upgrade from previous Claroline version
+  3. TROUBLESHOOTING
+  4. ADMIN
+
+
+
+REQUIREMENTS
+============
+
+To install Claroline 1.6.0 on a computer, whether locally or remotely, 
+you need the following on your machine :
+
+1. One of the following Operating systems :
+
+        Linux / BSD / Unix (*)
+        Windows (9x, Me, NT4, 2000, XP)
+        MacOs X.
+
+  (*) We thoroughly test Claroline on Debian and Mandrake distributions, 
+      but other Linux distributions should work too. We've received 
+      positive feedbacks from users working on Red Hat and Suse. 
+      Don't hesitate to notify us of any problem encountered on other 
+      Linux distributions.
+
+1. A web server (We recommend Apache, but others should work too),
+
+2. PHP scripting language (version 4.1 or later), configured with the 
+   following modules : mysql, zlib, preg. Most of the PHP4 compiled 
+   distributions are provided with these modules. Anyway, their presence 
+   is checked by the Claroline install script.
+
+   Some users could meet problems if their PHP setting doesn't fit 
+   these ones:
+
+        short_open_tag       = On
+        register_globals     = On
+        safe_mode            = Off
+        magic_quotes_gpc     = On
+        magic_quotes_runtime = Off
+        error_reporting      = E_ALL & ~E_NOTICE (*)
+
+   For example, users with PHP 4.2 or superior should set the parameter 
+   
+                 register_globals = on
+
+   and users with PHP 4.3 or superior should also set the parameter 
+   
+                 magic_quotes_gpc = On
+
+   (*) It is possible to set the error_reporting to a lower level 
+       but not a higher one.
+
+
+3. The MySQL databases server plus a login/password allowing to 
+   administrate and create at least one database.
+
+   Claroline can be installed in tow different modes : 'Single 
+   Database' and 'Multi Database'. In 'Multi Database' mode, Claroline 
+   will create a new database for each course created. This mode is 
+   sometimes more appropriate to manage a platform with a huge bulk of 
+   course sites. But it means the database account used by Claroline 
+   has to allow to create and administrate several databases. By 
+   default Claroline is set to be install on a 'single database host' 
+   If you want to use Claroline in 'Multi Database' mode, you have to 
+   select this option on purpose at install.
+
+       WARNING ! If you use the 'single database' install option, it is 
+       recommended to use this database for Claroline use only. If you 
+       share this database with other applications, interferences could 
+       occurs between table names of both applications that could conducts 
+       to serious problems.
+
+       NOTE 1. The backticks characters (`) inserted inside most of the 
+       Claroline SQL queries since Claroline 1.3 doesn't work with MySQL 
+       versions previous to 3.23.6.
+
+       NOTE 2. People using MySQL 4.1 (or later) could face connection 
+	   problem. To fix this problem, see on the my SQL web site :
+	   
+			"Client does not support authentication protocol"
+			http://dev.mysql.com/doc/mysql/en/Old_client.html
+
+
+4. Web Write access to web directory where Claroline has been moved 
+   or unzipped to. On a Windows machine locally, this
+   is not a problem. Remotely, you need to be allowed to CHMOD
+   through FTP, telnet or any means.
+
+5. A Mail Transport Agent (MTA). This not absolutely necessary but some 
+   Claroline features will remain silent if you don't provide MTA. 
+   Most Linux distributions provide MTA (Sendmail, Qmail, PostFix, 
+   ...). On Windows machines, no MTA are provided by default. You can 
+   either modify the php.ini file to redirect mail to an MTA available 
+   on an other machine, or install an MTA on the Claroline server. 
+   Several MTA are freely available for Windows (Mercury, Blat, 
+   Netmail95, WMailto , Hamster ...).
+
+
+INSTALLATION PROCEDURE
+======================
+
+NEW CLAROLINE INSTALLATION
+--------------------------
+
+1. Download 'claroline160.tar.gz' 
+
+   Windows : download 'claroline160.zip'.
+
+
+2. Open a shell, go to download directory and type 
+
+	tar -zxvf claroline160.tar.gz
+
+   Windows : unzip 'claroline160.zip'.
+
+
+3. FTP or move by any means 'index.php' file and 'claroline' directory
+   to your website on web server (whether web root or subdirectory). 
+   'index.php' should remain where it is, outside 'claroline' directory. 
+
+   Windows: If you use easyphp locally (http://www.easyphp.org), just 
+   drag and drop 'index.php' file and 'claroline' directory into 
+   C:\Program Files\easyphp\www\
+
+4. Open Web Browser and go to 
+
+	http://www.mydomain.org/mysite/mydir/claroline/install/
+
+   Windows : with easyphp locally, open: 
+
+	http://localhost/claroline/install/ (don't forget the final /).
+
+5. Follow instructions.
+
+   Windows: if you use easyphp out of the box, login and password 
+   for MySQL should remain empty.
+
+
+
+UPDGRADE FROM PREVIOUS CLAROLINE VERSION
+----------------------------------------
+
+The upgrade works only from Claroline 1.5.x. Older Claroline versions 
+should upgrade first to Claroline 1.5.3 before upgrade to Claroline 1.6.
+
+Before upgrading we heavily recommend you do a full backup of the previous 
+Claroline directories and databases. If you are unsure how to achieve this 
+please ask your hosting provider for advice.
+
+1. Download 'claroline160.tar.gz'
+
+   Windows : download 'claroline160.zip'.
+
+
+2. Open a shell, go to download directory and type
+
+	tar -zxvf claroline160.tar.gz
+
+   Windows : unzip 'claroline160.zip'.
+
+
+3. Replace your previous Claroline directory and index.php by the new one.
+
+        WARNING ! Don't delete the previous directory before 
+        installing the new one. You will loose your previous 
+        configuration files (eg 'claro_main.conf.php'). Simply 
+        replace the old directory with a new one with a 'copy' 
+        command. That way, the new file versions will overwrite the 
+        old ones and leave the others intact.
+
+4. Open Web Browser and go to
+
+   http://www.mydomain.org/mysite/mydir/claroline/admin/upgrade/upgrade.php
+
+   Windows with easyPhp locally, open:
+
+   http://localhost/mydir/laroline/admin/upgrade/upgrade.php
+
+5. Follow instructions.
+
+
+
+TROUBLESHOOTING
+===============
+
+In case web install doesn't work, you can try manual install. 
+
+1. Go, if needed, to 'http://www.claroline.net' and ask a question on the 
+   Support forum. Read however the previous messages to see if there is 
+   already an answer to your question.
+
+
+
+ADMINISTRATION SECTION
+======================
+
+To access the Claroline administration section, open browser 
+and go to http://www.mydomain.org/mysite/claroline/admin/
 
 =========================================================================
-                Europe, Belgium, Louvain-la-Neuve - December 10 2004
+                Europe, Belgium, Louvain-la-Neuve - April 21 2004
 ================================== END ===================================
