--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,5 +1,5 @@
 *********************************************
-CLAROLINE 1.7 RELEASE CANDIDATE - INSTALL
+CLAROLINE 1.7 RELEASE CANDIDATE 2 - INSTALL
 *********************************************
 
 Thank you for downloading Claroline 1.7 . This text will guide you 
@@ -98,16 +98,16 @@ INSTALLATION PROCEDURE
 NEW CLAROLINE INSTALLATION
 --------------------------
 
-1. Download 'claroline170rc1.tar.gz' 
+1. Download 'claroline170rc2.tar.gz'
 
-   Windows : download 'claroline170rc1.zip'.
+   Windows : download 'claroline170rc2.zip'.
 
 
 2. Open a shell, go to download directory and type 
 
-	tar -zxvf claroline170rc1.tar.gz
+	tar -zxvf claroline170rc2.tar.gz
 
-   Windows : unzip 'claroline170rc1.zip'.
+   Windows : unzip 'claroline170rc2.zip'.
 
 3. FTP or move by any means 'index.php' file and 'claroline' directory
    to your website on web server (whether web root or subdirectory). 
@@ -151,9 +151,9 @@ please ask your hosting provider for advice.
 
 2. Open a shell, go to download directory and type
 
-	tar -zxvf claroline170rc1.tar.gz
+	tar -zxvf claroline170rc2.tar.gz
 
-   Windows : unzip 'claroline170rc1.zip'.
+   Windows : unzip 'claroline170rc2.zip'.
 
 
 3. Replace your previous Claroline directory and index.php by the new one.
